--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ numpy = "^1.22.3"
 pandas = "^1.4.1"
 sklearn = "^0.0"
 matplotlib = "^3.5.1"
+black = "^22.3.0"
 
 [tool.poetry.dev-dependencies]
 
